# xehw

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TODO.md  build_web.cmd  build_web.sh  index.html  shell.nix  start_server.cmd  tut.txt
.cargo/: config.toml
assets/: help.xeh
assets/examples/: 6502-asm.xeh  cstring.xeh  doom-fire.xeh  gb-tile-2bpp.xeh  ines.xeh  quake-pak-build.xeh  quake-pak.xeh  vint.xeh
assets/tut/: tut.md
docs/: eframe_template.js  eframe_template_bg.wasm  index.html  sw.js
docs/examples/: cstring.xeh  gb-tile-2bpp.xeh  ines.xeh  quake-pak-build.xeh  quake-pak.xeh
server/: broadcast.py
src/: agent.rs  app.rs  canvas.rs  collab.rs  file_explorer.rs  hotkeys.rs  layouter.rs  lib.rs  main.rs  palette.rs  style.rs  workspace.rs
