[package]
name = "xeh_playground"
version = "0.1.0"
authors = ["1"]
edition = "2021"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
egui = "0.17.0"
eframe = { version = "0.17.0", features = ["persistence"] }
serde = { version = "1", features = ["derive"], optional = true }
xeh = { path = "../xeh", features = ["calc_limit"], default-features = false } # features = ["mmap"]
rfd = "0.8.2"
arcstr = "1.1.3"

[features]
default = ["persistence"]
persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown

[profile.release]
opt-level = 2 # fast and small wasm

[profile.dev]
debug = false
opt-level = 2 # fast and small wasm
[patch.crates-io]

# If you fork https://github.com/emilk/egui you can test with:
eframe = { path = "../egui/eframe", features = ["persistence"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4.19"
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
