[package]
name = "xeh_playground"
version = "0.1.0"
authors = ["1"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.30"
eframe = { version = "0.30", default-features = false, features = [
    # "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
] }
log = "0.4"
serde = { version = "1", features = ["derive"], optional = true }
xeh = { git = "https://github.com/anykey111/xeh", features = ["calc_limit"], default-features = false } # features = ["mmap"]
rfd = { version = "0.8.2", default-features = false, features = ["xdg-portal"] }
arcstr = "1.1.3"
ehttp = "0.5.0"
serde_json = "1.0.145"
uuid = { version = "1.18.1", features = ["v4", "js", "serde"] }
rand = "0.9.2"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
ewebsock = "0.8.0"
fuzzy-matcher = "0.3.7"

[features]
default = ["persistence"]
persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown

[profile.release]
opt-level = 2 # fast and small wasm
#codegen-units = 1
#lto = true
#strip = "symbols"

[profile.dev]
debug = false
opt-level = 2 # fast and small wasm
[patch.crates-io]

# If you fork https://github.com/emilk/egui you can test with:
#eframe = { path = "../egui/eframe", features = ["persistence"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"
env_logger = "0.11"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"
